# ComfyUI-LayerSeparation

./: .gitignore  LICENSE  README.md  __init__.py  download_models.py  nodes.py  pipeline.py  pyproject.toml  requirements.txt
locales/zh/: nodeDefs.json
